# intermediate-feat-eng

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
cicdvenv/: pyvenv.cfg
docs/: index.md
intermediate_feat_eng/: __init__.py  encoding.py  scaling.py
intermediatefeateng/: __init__.py
tests/: test_encoding.py  test_scaling.py
